# lifelib

./: .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  MIGRATION_SUMMARY.md  Makefile  README.rst  TESTING.md  pyproject.toml  requirements-travis.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: copilot-instructions.md
.github/workflows/: tests.yml
devnotes/: MAKEFILE.md  release_steps.txt  update_binder.txt
doc/: uddocs.py
doc/source/: banners.rst  conf.py  contributing.rst  download.rst  index.rst  notebooks.rst  privacypolicy.rst  updates.rst  whatsnew.rst
doc/source/_templates/: layout.html  lib_module.rst
doc/source/images/: nop_drawio.xml
doc/source/libraries/: index.rst
doc/source/projects/: ifrs17sim.rst  ifrs17sim_charts_baseline.nblink  nestedlife.rst  simplelife.rst  solvency2.rst
doc/source/quickstart/: faq.md  use_with_spyder.rst
doc/source/releases/: older_releases.rst  relnotes_v0.11.rst  relnotes_v0.12.rst  relnotes_v0.13.rst  relnotes_v0.2.0.rst  relnotes_v0.3.0.rst  relnotes_v0.4.1.rst  relnotes_v0.5.0.rst  relnotes_v0.8.0.rst  relnotes_v0.9.1.rst
docs/: .buildinfo  CNAME  TESTING.md  TEST_MIGRATION_SUMMARY.md  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/simplelife/: assumptions.html  build.html  build_input.html  lifetable.html  policy.html  projection.html  simplelife.html
docs/_sources/: index.rst.txt  quickstart.rst.txt
docs/projects/: simplelife.html
examples/ifrs17sim/: README.txt  plot_csm_amortization.py  plot_csm_waterfall.py
examples/nestedlife/: README.txt  plot_actexpct.py  plot_pvnetcf.py
examples/simplelife/: README.txt  plot_simplelife.py
lifelib/: __init__.py  _dirs.py  utility.py
lifelib/commands/: create.py
lifelib/libraries/annuallife/: README.txt  draw_charts_radar.py  input.xlsx  plot_pols_if_lapse_up_tradlife_a_ex1.py  plot_pvcashflows.py  plot_pvcashflows_tradlife_a.py  plot_scr_cashflows_tradlife_a_ex1.py  plot_scr_radar_tradlife_a_ex1.py  plot_tradlife_a.py  tradlife_a-demo.ipynb  tradlife_a-space-overview.ipynb
lifelib/libraries/appliedlife/: gmxb_example.xlsx  model_parameters.xlsx
lifelib/libraries/assets/: generate_bond_data.ipynb
lifelib/libraries/basiclife/: basic_term_sample.xlsx  create_premium_table.ipynb  generate_model_points.ipynb  generate_model_points_ASL.ipynb  generate_model_points_with_duration.ipynb  (+5 more)
lifelib/projects/: README.txt
lifelib/tests/: check_newlife.py
makedocs/: Makefile  generate_mxfiles.py  make.bat  proc_notebooks.py  procnb.py  uddocs.bat  uddocs.py
makedocs/source/: about.rst  about_lifelib.rst  archive.rst  banners.rst  binderlinks.rst  conf.py  contributing.rst  download.rst  faq.md  index.rst  installation.rst  notebooks.rst  quickstart.rst  spyder.rst  updates.rst  videos.rst  whatsnew.rst
samples/: liability_cashflow.py
tests/: check_newlife.py  check_runtime.py
tests/commands/: test_create.py
tests/data/: data_nestedlife2  data_simplelife  generate_testdata.py  generate_testdata_nestedlife.py  generate_testdata_nestedlife_v0.py  generate_testdata_solvency2.py
tests/filecomp/: test_filecomp.py
tests/projects/: generate_testdata.py  test_nestedlife.py  test_simplelife.py  test_solvency2.py
tests/projects_script/: test_nestedlife.py  test_solvency2.py
tests/projects_v0/: test_nestedlife.py  test_simplelife.py  test_solvency2.py
(+889 files in other folders)
